--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-gesture-handler": "^2.17.0",
     "react-native-paper": "^5.12.3",
     "react-native-progress": "^5.0.1",
+    "react-native-reanimated": "^3.12.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
