--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-firebase/app": "^20.1.0",
+    "@react-native-firebase/messaging": "^20.1.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
@@ -21,6 +23,7 @@
     "react-native-gesture-handler": "^2.17.0",
     "react-native-paper": "^5.12.3",
     "react-native-progress": "^5.0.1",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.12.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.4",
