--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "^2.17.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.3",
     "react-native-progress": "^5.0.1",
     "react-native-push-notification": "^8.1.1",
