--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "^2.17.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.3",
