--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.3.0",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-webview": "^13.10.3"
+    "react-native-video": "^6.4.3",
+    "react-native-webview": "^13.10.3",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
