--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^15.3.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-video": "^6.4.3",
